--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext.kotlin_version = "1.2.71"
+    ext.lifecycle_version = "1.1.1"
+    ext.support_version = "27.1.1"
+    ext.firebase_version = "16.0.5"
+    ext.constraint_layout_version = "1.1.3"
+
     repositories {
         google()
         jcenter()
